--- a/client/html/index.html
+++ b/client/html/index.html
@@ -76,13 +76,6 @@
                         <i class="fa-regular fa-trash"></i>
                         <span>Clear Conversations</span>
                     </button>
-                    <div class="info">
-                        <i class="fa-regular fa-circle-info"></i>
-                        <span class="convo-title">By: @xtekky<br>
-                            Version: 0.0.1-beta<br>
-                            Release: 2023-04-18<br>
-                        </span>
-                    </div>
                 </div>
             </div>
             <div class="conversation disable-scrollbars">
@@ -96,7 +89,7 @@
                 </div>
                 <div class="user-input">
                     <div class="box input-box">
-                        <textarea id="message-input" placeholder="Ask a question" cols="30" rows="10" style="white-space: pre-wrap;" oninput="resizeTextarea(this)"></textarea>
+                        <textarea id="message-input" placeholder="Ask a question" cols="30" rows="10" style="white-space: pre-wrap;"></textarea>
                         <div id="send-button">
                             <i class="fa-regular fa-paper-plane-top"></i>
                         </div>
